# VSModEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TimeTracker.md  build.sh  imgui.ini
docs/: Architecture.md
include/: VSModEngine.h
include/Core/: Base.h  EditorApp.h  Logger.h
include/Event/: Event.h  EventCategory.h  EventDispatcher.h  EventType.h
include/Plugin/: IPlugin.h  PluginManager.h
include/UI/: IMenu.h  IPanel.h  MenuManager.h
include/Utils/: fs.h
plugins/: README.md
plugins/CorePlugin/: CMakeLists.txt
plugins/CorePlugin/include/: CorePlugin.h
plugins/CorePlugin/src/: CorePlugin.cpp
src/: main.cpp
src/Core/: EditorApp.cpp  Logger.cpp
src/Plugin/: PluginManager.cpp
src/Utils/: fs.cpp
